--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -17,13 +17,10 @@
   <body>
     <header>
       <nav
-        class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao"
+        class="navbar navbar-expand-lg navbar-dark fixed-top pt-1 estilo-barra-navegacao"
       >
-        <section class="container-fluid">
-          <a
-            class="navbar-brand texto-barra-navegacao"
-            href="../../../index.html"
-          >
+        <section class="container-fluid ms-3">
+          <a class="navbar-brand texto-barra-navegacao" href="../../../index.html">
             <img
               class="logo-barranav"
               src="../img/img_logo.png"
@@ -89,30 +86,30 @@
           <h2>
             Nossa equipe é formada pelos seguintes estudantes da T14 da Resilia:
           </h2>
-					<article class="col">
-						<div
-							class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
-						>
-							<img src="" class="card-img-top image fluid" alt="" />
-							<div class="card-body p-2">
-								<h4 class="card-title text-center">Christopher Mamed</h4>
-								<a
-									target="_blank"
-									href="https://github.com/chrismamed"
-									class="btn"
-									role="button"
-									>Github</a
-								>
-								<a
-									target="_blank"
-									href="https://www.linkedin.com/in/christopher-mamed-407485139/"
-									class="btn"
-									role="button"
-									>LinkedIn</a
-								>
-							</div>
-						</div>
-					</article>
+          <article class="col">
+            <div
+              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
+            >
+              <img src="" class="card-img-top image fluid" alt="" />
+              <div class="card-body p-2">
+                <h4 class="card-title text-center">Christopher Mamed</h4>
+                <a
+                  target="_blank"
+                  href="https://github.com/chrismamed"
+                  class="btn"
+                  role="button"
+                  >Github</a
+                >
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/christopher-mamed-407485139/"
+                  class="btn"
+                  role="button"
+                  >LinkedIn</a
+                >
+              </div>
+            </div>
+          </article>
           <article class="col">
             <div
               class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
@@ -189,7 +186,7 @@
       </section>
     </main>
 
-    <footer class="fixed-bottom bg-light p-1 text-center">
+    <footer class="fixed-bottom bg-light p-3 text-center">
       <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
     <script
