--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -47,6 +47,14 @@
               <li class="nav-item">
                 <a
                   class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="../../../index.html"
+                  >Home</a
+                >
+              </li>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
                   href="./produtos.html"
                   >Serviços</a
                 >
