update margin section modelo

--- a/assets/view/html/produtos.html
+++ b/assets/view/html/produtos.html
@@ -87,7 +87,7 @@
     </header>
 
     <main>
-      <section class="container mt-3 pt-5 d-flex flex-column">
+      <section class="container mt-3 pt-5 d-flex flex-column mb-2">
         <h2 class="secao-fonte-titulo">Nosso modelo</h3>
         <p class="secao-fonte-texto">
           Contamos com uma excelente interface, desenvolvida especialmente para
