add input required

--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -92,6 +92,7 @@
           size="70"
           maxlength="70"
           placeholder="Digite seu nome completo"
+          required
         />
 
         <label class="espaco-label" for="txtEmail">E-mail:</label>
@@ -104,6 +105,7 @@
           maxlength="50"
           aria-describedby="emailHelp"
           placeholder="nome@exemplo.com"
+          required
         />
 
         <label class="espaco-label" for="txtSenha1">Senha:</label>
@@ -115,6 +117,7 @@
           size="30"
           maxlength="30"
           placeholder="Digite uma senha"
+          required
         />
 
         <label class="espaco-label" for="txtSenha2"
@@ -128,6 +131,7 @@
           size="30"
           maxlength="30"
           placeholder="Repita a senha"
+          required
         />
 
         <label class="espaco-label" for="txtRG">RG:</label>
@@ -139,6 +143,7 @@
           size="15"
           maxlength="15"
           placeholder="Digite somente números"
+          required
         />
 
         <label class="espaco-label" for="txtCEP">CEP:</label>
@@ -149,6 +154,7 @@
             class="form-control"
             id="cep"
             placeholder="Digite somente números"
+            required
           />
           <div class="input-group-append">
             <button class="btn botao-cor-especial" type="button" id="btn-cep">
@@ -165,6 +171,7 @@
           id="rua"
           size="70"
           maxlength="70"
+          required
         />
 
         <label class="espaco-label" for="txtNumero">Número:</label>
@@ -176,6 +183,7 @@
           size="10"
           maxlength="10"
           placeholder="Digite apenas números"
+          required
         />
 
         <label class="espaco-label" for="txtComplemento">Complemento:</label>
@@ -196,6 +204,7 @@
           id="bairro"
           size="40"
           maxlength="40"
+          required
         />
 
         <label class="espaco-label" for="txtCidade">Cidade:</label>
@@ -206,6 +215,7 @@
           id="cidade"
           size="40"
           maxlength="40"
+          required
         />
 
         <label class="espaco-label" for="txtCidade">Estado:</label>
@@ -216,6 +226,7 @@
           id="estado"
           size="2"
           maxlength="2"
+          required
         />
 
         <button
