update produtos font size

--- a/assets/view/html/produtos.html
+++ b/assets/view/html/produtos.html
@@ -94,7 +94,7 @@
           o dev que está <strong>começando</strong> seus estudos neste momento.<br>
           O nosso modelo de estudos identifica os erros semânticos e modifica sua cor, a fim de que você possa ter uma <strong>percepção melhor</strong> de onde eles estão.<br>
           Junto a isso, o próprio sistema fornece sugestões se você estiver com
-          dificuldades em seguir as instruções do exercício.<br><br>
+          dificuldades em seguir as instruções do exercício.<br>
           Para começar a utilizar a plataforma é necessário selecionar um dos planos
           abaixo e realizar o cadastro:
         </p>
