--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -20,7 +20,10 @@
         class="navbar navbar-expand-lg navbar-dark fixed-top pt-1 estilo-barra-navegacao"
       >
         <section class="container-fluid ms-3">
-          <a class="navbar-brand texto-barra-navegacao" href="../../../index.html">
+          <a
+            class="navbar-brand texto-barra-navegacao"
+            href="../../../index.html"
+          >
             <img
               class="logo-barranav"
               src="../img/img_logo.png"
@@ -51,7 +54,6 @@
                   >Home</a
                 >
               </li>
-            <ul class="navbar-nav">
               <li class="nav-item">
                 <a
                   class="nav-link active d-flex justify-content-end estilo-link-barranav"
