--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -20,7 +20,10 @@
         class="navbar navbar-expand-lg navbar-dark fixed-top pt-1 estilo-barra-navegacao"
       >
         <section class="container-fluid ms-3">
-          <a class="navbar-brand texto-barra-navegacao" href="../../../index.html">
+          <a
+            class="navbar-brand texto-barra-navegacao"
+            href="../../../index.html"
+          >
             <img
               class="logo-barranav"
               src="../img/img_logo.png"
@@ -51,7 +54,6 @@
                   >Home</a
                 >
               </li>
-            <ul class="navbar-nav">
               <li class="nav-item">
                 <a
                   class="nav-link active d-flex justify-content-end estilo-link-barranav"
@@ -86,9 +88,7 @@
       </nav>
     </header>
 
-    <main
-      class="container h-100 d-flex align-items-center justify-content-center"
-    >
+    <main>
       <section class="col-10 col-xl-8 col-lg-8 col-md-8 col-sm-8">
         <div class="row">
           <h2>
