update contato cards

--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -89,109 +89,131 @@
     </header>
 
     <main>
-      <section class="col-10 col-xl-8 col-lg-8 col-md-8 col-sm-8">
-        <div class="row">
-          <h2>
+      <div
+        class="mt-5 pt-5 text-center container d-flex align-items-center justify-content-center"
+      >
+        <section class="row d-flex justify-content-center mb-5">
+          <h2 class="titulo-integrante">
             Nossa equipe é formada pelos seguintes estudantes da T14 da Resilia:
           </h2>
-          <article class="col">
-            <div
-              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
-            >
-              <img src="" class="card-img-top image fluid" alt="" />
-              <div class="card-body p-2">
-                <h4 class="card-title text-center">Christopher Mamed</h4>
+
+          <article
+            class="d-flex justify-content-center col-12 col-xl-3 col-lg-3 col-md-6"
+          >
+            <div class="card-body card-contato">
+              <img
+                src="../img/chrisperfil.jpg"
+                class="imagem-integrantes card-img-top image fluid"
+                alt="foto do Christopher"
+              />
+              <div class="card-body">
+                <h4 class="nome-integrante">Christopher Mamed</h4>
                 <a
                   target="_blank"
                   href="https://github.com/chrismamed"
-                  class="btn"
+                  class="btn m-1 botao-cor-especial"
                   role="button"
                   >Github</a
                 >
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/christopher-mamed-407485139/"
-                  class="btn"
+                  class="btn botao-cor-especial"
                   role="button"
                   >LinkedIn</a
                 >
               </div>
             </div>
           </article>
-          <article class="col">
-            <div
-              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
-            >
-              <img src="" class="card-img-top image fluid" alt="" />
-              <div class="card-body p-2">
-                <h4 class="card-title text-center">Victor Del' Duca</h4>
-                <a
-                  target="_blank"
-                  href="https://github.com/Vitor-DelDuca"
-                  class="btn"
-                  role="button"
-                  >Github</a
-                >
-                <a
-                  target="_blank"
-                  href="https://www.linkedin.com/in/vitor-del-duca-gestao-programacao-treinamento/"
-                  class="btn"
-                  role="button"
-                  >LinkedIn</a
-                >
-              </div>
-            </div>
-          </article>
-          <article class="col">
-            <div
-              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
-            >
-              <img src="" class="card-img-top image fluid" alt="" />
-              <div class="card-body p-2">
-                <h4 class="card-title text-center">Hadassa Moraes</h4>
+
+          <article
+            class="d-flex justify-content-center col-12 col-xl-3 col-lg-3 col-md-6"
+          >
+            <div class="card-body card-contato">
+              <img
+                src="../img/hadassaperfil.jpg"
+                class="card-img-top image fluid"
+                alt="foto da Hadassa"
+              />
+              <div class="card-body p-2 flex-column justify-content-center">
+                <h4 class="nome-integrante">Hadassa Moraes</h4>
                 <a
                   target="_blank"
                   href="https://github.com/hadmoraes"
-                  class="btn"
+                  class="btn m-1 botao-cor-especial"
                   role="button"
                   >Github</a
                 >
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/hadassa-moraes-5a6712230/"
-                  class="btn"
+                  class="btn botao-cor-especial"
                   role="button"
                   >LinkedIn</a
                 >
               </div>
             </div>
           </article>
-          <article class="col">
-            <div
-              class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded"
-            >
-              <img src="" class="card-img-top image fluid" alt="" />
+
+          <article
+            class="d-flex justify-content-center col-12 col-xl-3 col-lg-3 col-md-6"
+          >
+            <div class="card-body card-contato">
+              <img
+                src="../img/vitorperfil.jpg"
+                class="card-img-top image fluid"
+                alt="foto do Victor"
+              />
               <div class="card-body p-2">
-                <h4 class="card-title text-center">Ytallo Bruno</h4>
+                <h4 class="nome-integrante">Victor Del' Duca</h4>
+                <a
+                  target="_blank"
+                  href="https://github.com/Vitor-DelDuca"
+                  class="btn m-1 botao-cor-especial"
+                  role="button"
+                  >Github</a
+                >
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/vitor-del-duca-gestao-programacao-treinamento/"
+                  class="btn botao-cor-especial"
+                  role="button"
+                  >LinkedIn</a
+                >
+              </div>
+            </div>
+          </article>
+
+          <article
+            class="d-flex justify-content-center mb-5 col-12 col-xl-3 col-lg-3 col-md-6"
+          >
+            <div class="card-body card-contato">
+              <img
+                src="../img/ytalloperfil.jpg"
+                class="card-img-top image fluid"
+                alt="foto do Ytallo"
+              />
+              <div class="card-body p-2">
+                <h4 class="nome-integrante">Ytallo Bruno</h4>
                 <a
                   target="_blank"
                   href="https://github.com/ytallobruno"
-                  class="btn"
+                  class="btn botao-cor-especial"
                   role="button"
                   >Github</a
                 >
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/ytallobruno/"
-                  class="btn"
+                  class="btn m-1 botao-cor-especial"
                   role="button"
                   >LinkedIn</a
                 >
               </div>
             </div>
           </article>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
 
     <footer class="fixed-bottom bg-light p-3 text-center">
