update vitor name

--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -165,7 +165,7 @@
                 alt="foto do Victor"
               />
               <div class="card-body p-2">
-                <h4 class="nome-integrante">Victor Del' Duca</h4>
+                <h4 class="nome-integrante">Vitor Del' Duca</h4>
                 <a
                   target="_blank"
                   href="https://github.com/Vitor-DelDuca"
