--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -123,6 +123,7 @@
           name="btnSubmitUsuario"
           class="btn w-50 botao-cor-especial"
           id="btn-submit"
+
         >
           Entrar
         </button>
@@ -145,6 +146,12 @@
           <hr>
           <p>Por favor, insira um email válido e tente novamente.</p>
         </div>
+
+        <div class="alert alert-danger mt-4" id="msg-inputVazio" role="alert" hidden>
+          <h4 class="alert-heading">Seus dados estão incompletos!</h4>
+          <hr>
+          <p>Por favor, preencha os dados que faltam.</p>
+        </div>
       </section>
     </main>
     
@@ -161,6 +168,7 @@
    <script src="../../models/js/emailModel.js"></script>
    <script src="../../view/js/manipuladorDom.js"></script>
    <script src="../../controller/js/inputController.js"></script>
+   <script src="../../controller/js/inputTamanhoController.js"></script>
    <script src="../../controller/js/msgController.js"></script>
   </body>
 </html>
