--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -229,10 +229,10 @@
           required
         />
 
-        <label class="espaco-label" for="txtCidade">Estado:</label>
+        <label class="espaco-label" for="txtEstado">Estado:</label>
         <input
           type="text"
-          name="txtCidade"
+          name="txtEstado"
           class="form-control"
           id="estado"
           size="2"
@@ -252,6 +252,11 @@
           <p>Por favor, confira seus dados e tente novamente.</p>
         </div>
         
+        <div class="alert alert-danger mt-4" id="msg-inputVazio" role="alert" hidden>
+          <h4 class="alert-heading">Seus dados estão incompletos!</h4>
+          <hr>
+          <p>Por favor, preencha os dados que faltam.</p>
+        </div>
         
         <button
           type="submit"
@@ -282,6 +287,7 @@
     <script src="../js/cepView.js"></script>
     <script src="../../controller/js/cepController.js"></script>
     <script src="../../controller/js/inputBorderController.js"></script>
+    <script src="../../controller/js/inputTamanhoController.js"></script>
     <script src="../../controller/js/msgController.js"></script>
     <script src="../../controller/js/cadastroSubmitController.js"></script>
 
